<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_state"
        />

    <TextView
        android:id="@+id/tv_attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_attention_signal"
        />

    <TextView
        android:id="@+id/tv_meditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_meditation_signal"
        />

    <TextView
        android:id="@+id/tv_blink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_blink_signal"
        />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        />


    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        />

    <Button
        android:id="@+id/getAll"
        android:onClick="getAll"
        android:text="藍寶取得資料"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--/*android:onClick="exportExcel"-->
    <Button
        android:id="@+id/test"
        android:text="藍寶資料丟起來"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/playSeekBar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="3px"
        android:layout_marginTop="5px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3">

      <Button
          android:id="@+id/start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="藍寶播起來"
          android:layout_weight="1"/>

      <Button
          android:id="@+id/pause"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="藍寶暫停起來"
          android:layout_weight="1"/>

      <Button
          android:id="@+id/stop"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="藍寶投胎囉~"
          android:layout_weight="1"/>

    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>